# keskireste

./: CONTRIBUTING.md  PKGBUILD  README.md  app.py  commitlint.config.js  install.md  install.sh  justfile  pyproject.toml  test_bank  test_ratounet
.github/workflows/: CI.yml
hooks/: commit-msg  pre-commit
shared/application/: repository.py
shared/domain/: entity.py  value_object.py
shared/infrastructure/test/: test_entity.py  test_repository.py  test_value_object.py
src/account/domain/: account.py  budget.py  history.py  recurring_transaction.py  transaction.py  user.py
src/account/infrastructure/: fastapi.py
src/account/test/: conftest.py  test_account.py  test_transaction.py
src/application/: exception.py  repository.py
src/application/account/: creator.py  deleter.py  reader.py  repository.py  updater.py
src/application/budget/: creator.py  reader.py  repository.py
src/application/history/: creator.py  reader.py  repository.py  updater.py
src/application/reccurring_transaction/: creator.py  deleter.py  repository.py  updater.py
src/application/transaction/: creator.py  deleter.py  repository.py  updater.py
src/application/user/: creator.py  deleter.py  read.py  reader.py  repository.py  updater.py
src/domain/: account.py  budget.py  entity.py  history.py  recurring_transaction.py  transaction.py  user.py
src/domain/budget/: __init__.py  budget.py  history.py
src/domain/saving/: account.py
src/domain/shared/: entity.py
src/infrastructure/: app.py  fastapi.py  router.py  router_frame.js  style.qss
src/infrastructure/account/: id.py
src/infrastructure/containers/: in_memory.py
src/infrastructure/flask/: user.py
src/infrastructure/history/: repository.py
src/infrastructure/pyside/: app.py  dashboard.py
src/infrastructure/transaction/: __init__.py  id.py
src/infrastructure/user/: id.py
src/shared/application/: id.py  repository.py
src/shared/domain/: email.py  entity.py  string.py  value_object.py
src/shared/test/: test_value_object.py
src/test/: conftest.py
(+143 files in other folders)
