[tool.poetry]
name = "keskireste"
version = "0.1.0"
description = ""
authors = ["Saucisse à roulettes <gaelmonach123@live.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
fire = "^0.5.0"
pandas = "^1.5.3"
black = "^23.1.0"
PySide6 = "^6.4.3"
ofxparse = "^0.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
