[tool.poetry]
name = "keskireste"
version = "0.1.0"
description = ""
authors = ["Saucisse à roulettes <gaelmonach123@live.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
PySide6 = "^6.4.3"
ofxparse = "^0.21"


[tool.poetry.group.dev.dependencies]
black = { extras = ["d"], version = "^23.3.0" }
mypy = "^1.2.0"


[tool.poetry.group.build.dependencies]
pyinstaller = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = 3.11
files = "src/"
