[tool.poetry]
name = "keskireste"
version = "0.1.0"
description = ""
authors = ["Saucisse à roulettes <gael.monachon.dev@gmail.com>"]
maintainers = ["Saucisse à roulettes <gael.monachon.dev@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "~3.11"
PySide6 = "^6.4.3"
ofxparse = "^0.21"
ppa = { git = "https://github.com/saucisses-a-roulettes/ppa.git", branch = "main" }
dependency-injector = "^4.41.0"

[tool.poetry.group.dev.dependencies]
black = { extras = ["d"], version = "^23.3.0" }
mypy = "^1.2.0"
pytest = "^7.3.1"
types-python-dateutil = "^2.8.19.13"
pytest-mock = "^3.10.0"

[tool.poetry.group.build.dependencies]
pyinstaller = "^5.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]

python_version = 3.11
files = "src/"
